[project]
name = "tiny-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adversarial-robustness-toolbox>=1.20.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
